# marksmen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  backlog.md  check.bat  check_webui.bat  checklist.md  diagram1.mmd  diagram2.mmd  fix_header.py  gap_audit.md  package-lock.json  patch.diff  patch2.diff  patchweb.diff  scratch_enum.typ  scratch_enum2.typ  scratch_markdown.md  scratch_markdown.typ  scratch_typst.typ  temp_test.typ  test.html  test.typ  test10.md  test4.typ  test6.md  test7.md  test_build.bat  test_double.html  test_js.js  test_md.md  test_ppt.bat  test_two_spaces.html
.cargo/: config.toml
crates/: list_test.md
crates/marksmen/: Cargo.toml
crates/marksmen-browser-extension/: content.js  manifest.json  popup.html  popup.js
crates/marksmen-cite/src/: index.html  main.js  styles.css  wasm_bridge.js
crates/marksmen-cite/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/marksmen-cite/src-tauri/src/: export.rs  fetch.rs  import.rs  lib.rs  main.rs  model.rs  server.rs  storage.rs  sync.rs
crates/marksmen-core/: Cargo.toml
crates/marksmen-core/src/: lib.rs
crates/marksmen-core/src/config/: frontmatter.rs  math.rs  mod.rs  page.rs  style_map.rs
crates/marksmen-core/src/parsing/: attribute_pass.rs  combine.rs  mailmerge.rs  mod.rs  parser.rs
crates/marksmen-crypto/: Cargo.toml
crates/marksmen-crypto/src/: docx.rs  lib.rs  pdf_enc.rs  pkcs7.rs
crates/marksmen-csl/: Cargo.toml
crates/marksmen-csl/src/: engine.rs  lib.rs  model.rs  schema.rs  sort.rs
crates/marksmen-diff/: Cargo.toml
crates/marksmen-diff/src/: lib.rs
crates/marksmen-docx/: Cargo.toml
crates/marksmen-docx-read/: Cargo.toml
crates/marksmen-docx-read/src/: lib.rs
crates/marksmen-docx/examples/: test_docx_comment.rs  test_regex.rs
crates/marksmen-docx/src/translation/: document.rs  document.rs.orig  elements.rs  mod.rs  test_ast.rs  test_ast2.rs
crates/marksmen-docx/src/translation/math/: ast.rs  latex_to_omml.rs  mod.rs
crates/marksmen-docx/src/translation/mermaid/: mermaid_to_drawingml.rs  mod.rs
crates/marksmen-editor/src/: assistant.js  dictation.js  index.html  mailings.js  main.js  references.js  styles.css  wasm_bridge.js
crates/marksmen-editor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/marksmen-editor/src-tauri/src/: lib.rs  main.rs
crates/marksmen-epub/: Cargo.toml
crates/marksmen-epub-read/: Cargo.toml
crates/marksmen-epub-read/src/: lib.rs
crates/marksmen-epub/src/: lib.rs  oebps.rs
crates/marksmen-html/: Cargo.toml
crates/marksmen-html-read/: Cargo.toml
crates/marksmen-html-read/src/: lib.rs
crates/marksmen-html/src/: lib.rs
crates/marksmen-latex/: Cargo.toml
crates/marksmen-latex-read/: Cargo.toml
crates/marksmen-latex-read/src/: lib.rs
crates/marksmen-latex/src/: lib.rs
crates/marksmen-marp/: Cargo.toml
crates/marksmen-marp-read/: Cargo.toml
crates/marksmen-marp-read/src/: lib.rs
crates/marksmen-marp/src/: lib.rs
crates/marksmen-mermaid/: Cargo.toml
crates/marksmen-mermaid/src/: lib.rs
crates/marksmen-odt/: Cargo.toml
crates/marksmen-odt-read/: Cargo.toml
crates/marksmen-odt-read/src/: lib.rs
crates/marksmen-odt/src/: lib.rs
crates/marksmen-odt/src/rendering/: mod.rs
crates/marksmen-odt/src/translation/: mod.rs  translator.rs
crates/marksmen-pdf/: Cargo.toml
crates/marksmen-pdf-read/: Cargo.toml  test_out.md
crates/marksmen-pdf-read/examples/: test_extract.rs
crates/marksmen-pdf-read/src/: lib.rs  text_mapper.rs
crates/marksmen-pdf/src/: lib.rs
crates/marksmen-pdf/src/rendering/: compiler.rs  mod.rs
crates/marksmen-pdf/src/translation/: mod.rs  translator.rs
crates/marksmen-pdf/src/translation/elements/: mod.rs
crates/marksmen-pdf/src/translation/math/: latex_to_typst.rs  mod.rs
crates/marksmen-pdf/tests/: extract.rs  roundtrip_test.rs
crates/marksmen-plugin/: Cargo.toml
crates/marksmen-plugin/src/: lib.rs
crates/marksmen-ppt/: Cargo.toml
crates/marksmen-ppt-read/: Cargo.toml
crates/marksmen-ppt-read/src/: lib.rs
crates/marksmen-ppt/src/: lib.rs  ooxml.rs
crates/marksmen-render/: Cargo.toml
crates/marksmen-render/src/: lib.rs  math.rs  mermaid.rs  svg.rs  world.rs
crates/marksmen-rich/: Cargo.toml
crates/marksmen-rich-read/: Cargo.toml
crates/marksmen-rich/src/: lib.rs  tests.rs  writer.rs
crates/marksmen-roundtrip/: Cargo.toml  demo_stripped.md  extracted_docx.md  extracted_manual.md  extracted_odt.md
crates/marksmen-roundtrip/src/: lib.rs
crates/marksmen-roundtrip/tests/: roundtrip_demo.rs
crates/marksmen-roundtrip/tests/snapshots/: demo_output.docx  demo_output.epub  demo_output.html  demo_output.odt  demo_output.pptx  demo_output.tex  demo_output.typ  demo_output_target.html  html_extracted.md  index.html  latex_extracted.md  similarity_report.json  typst_extracted.md
crates/marksmen-typst/: Cargo.toml
crates/marksmen-typst-read/: Cargo.toml
crates/marksmen-wasm/: Cargo.toml
crates/marksmen-wasm/src/: lib.rs
crates/marksmen-webui/: Cargo.toml
crates/marksmen-webui/src/: main.rs
crates/marksmen-webui/static/: index.html  script.js  style.css
crates/marksmen-xhtml/: Cargo.toml
crates/marksmen-xhtml-read/: Cargo.toml
crates/marksmen-xhtml/src/: lib.rs
crates/marksmen-xml/: Cargo.toml
crates/marksmen-xml-read/: Cargo.toml
crates/marksmen/src/: main.rs
crates/marksmen/src/cli/: mod.rs  runner.rs
examples/: Cargo.toml  conversions.rs  creation.rs  roundtrips.rs  symmetry_assessments.rs  test_latex_run.rs
scripts/: scratch_footnote.rs
temp_cmark/: Cargo.toml
temp_cmark/src/: main.rs
test_align/: Cargo.toml
test_align/src/: main.rs
test_docx_out/docProps/: app.xml  core.xml  custom.xml
test_docx_out/word/: comments.xml  commentsExtended.xml  document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
test_out/word/: comments.xml  commentsExtended.xml  document.xml  numbering.xml
test_out2/_rels/: .rels
test_out2/word/: comments.xml  document.xml  styles.xml
test_out3/: [Content_Types].xml
test_out3/word/: comments.xml  commentsExtended.xml  footnotes.xml
(+35 files in other folders)
