[package]
name = "marksmen-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
marksmen-core = { path = "../crates/marksmen-core" }
marksmen-docx = { path = "../crates/marksmen-docx" }
marksmen-docx-read = { path = "../crates/marksmen-docx-read" }
marksmen-odt = { path = "../crates/marksmen-odt" }
marksmen-odt-read = { path = "../crates/marksmen-odt-read" }
marksmen-pdf = { path = "../crates/marksmen-pdf" }
marksmen-pdf-read = { path = "../crates/marksmen-pdf-read" }
marksmen-html = { path = "../crates/marksmen-html" }
marksmen-html-read = { path = "../crates/marksmen-html-read" }
anyhow = { workspace = true }
strsim = "0.11.1"

[[bin]]
name = "creation"
path = "creation.rs"

[[bin]]
name = "conversions"
path = "conversions.rs"

[[bin]]
name = "roundtrips"
path = "roundtrips.rs"

[[bin]]
name = "symmetry_assessments"
path = "symmetry_assessments.rs"
