[package]
name = "marksmen-docx"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4"
marksmen-core = { path = "../marksmen-core" }
marksmen-mermaid = { path = "../marksmen-mermaid" }
marksmen-render = { path = "../marksmen-render" }
anyhow = { workspace = true }
tracing = { workspace = true }
pulldown-cmark = { workspace = true }
marksmen-xml = { path = "../marksmen-xml" }
uuid = { version = "1.22.0", features = ["v4"] }
