[package]
name = "marksmen-odt"
version = "0.1.0"
edition = "2021"

[dependencies]
marksmen-core = { path = "../marksmen-core" }
marksmen-mermaid = { path = "../marksmen-mermaid" }
pulldown-cmark = { workspace = true }
zip = { workspace = true }
marksmen-xml = { path = "../marksmen-xml" }
tempfile = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
latex2mathml = "0.2.3"
base64 = { workspace = true }
