[package]
name = "marksmen-roundtrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
marksmen-core = { version = "0.1.0", path = "../marksmen-core" }
marksmen-docx = { version = "0.1.0", path = "../marksmen-docx" }
marksmen-docx-read = { version = "0.1.0", path = "../marksmen-docx-read" }
marksmen-odt = { version = "0.1.0", path = "../marksmen-odt" }
marksmen-odt-read = { version = "0.1.0", path = "../marksmen-odt-read" }
marksmen-html = { path = "../marksmen-html" }
marksmen-html-read = { path = "../marksmen-html-read" }
marksmen-pdf = { version = "0.1.0", path = "../marksmen-pdf" }
marksmen-pdf-read = { version = "0.1.0", path = "../marksmen-pdf-read" }
marksmen-ppt = { path = "../marksmen-ppt" }
marksmen-ppt-read = { path = "../marksmen-ppt-read" }
marksmen-xhtml = { path = "../marksmen-xhtml" }
marksmen-xhtml-read = { path = "../marksmen-xhtml-read" }
marksmen-latex = { path = "../marksmen-latex" }
marksmen-latex-read = { path = "../marksmen-latex-read" }
marksmen-marp = { path = "../marksmen-marp" }
marksmen-marp-read = { path = "../marksmen-marp-read" }
marksmen-typst = { path = "../marksmen-typst" }
marksmen-typst-read = { path = "../marksmen-typst-read" }
marksmen-epub = { path = "../marksmen-epub" }
marksmen-epub-read = { path = "../marksmen-epub-read" }
strsim = "0.11.1"
pulldown-cmark.workspace = true

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
