[package]
name = "marksmen-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element"] }

marksmen-core = { path = "../marksmen-core" }
marksmen-html = { path = "../marksmen-html" }
marksmen-html-read = { path = "../marksmen-html-read" }
marksmen-csl = { path = "../marksmen-csl" }
