[package]
name = "marksmen-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element"] }

marksmen-core = { path = "../marksmen-core" }
marksmen-html = { path = "../marksmen-html" }
marksmen-html-read = { path = "../marksmen-html-read" }
marksmen-csl = { path = "../marksmen-csl" }
marksmen-docx = { version = "0.1.0", path = "../marksmen-docx" }
marksmen-ppt = { version = "0.1.0", path = "../marksmen-ppt" }
marksmen-epub = { version = "0.1.0", path = "../marksmen-epub" }
marksmen-typst = { version = "0.1.0", path = "../marksmen-typst" }
marksmen-diff = { version = "0.1.0", path = "../marksmen-diff" }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
