[package]
name = "marksmen-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
marksmen-core = { path = "../marksmen-core" }
marksmen-docx = { path = "../marksmen-docx" }
marksmen-html = { path = "../marksmen-html" }
marksmen-latex = { path = "../marksmen-latex" }
marksmen-odt = { path = "../marksmen-odt" }
marksmen-typst = { path = "../marksmen-typst" }
marksmen-ppt = { path = "../marksmen-ppt" }
marksmen-marp = { path = "../marksmen-marp" }
marksmen-pdf = { path = "../marksmen-pdf" }
marksmen-render = { path = "../marksmen-render" }

marksmen-docx-read = { path = "../marksmen-docx-read" }
marksmen-html-read = { path = "../marksmen-html-read" }
marksmen-latex-read = { path = "../marksmen-latex-read" }
marksmen-odt-read = { path = "../marksmen-odt-read" }
marksmen-ppt-read = { path = "../marksmen-ppt-read" }
marksmen-marp-read = { path = "../marksmen-marp-read" }
marksmen-typst-read = { path = "../marksmen-typst-read" }
marksmen-xml = { path = "../marksmen-xml" }

anyhow = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
base64 = { workspace = true }
typst = { workspace = true }
typst-svg = { workspace = true }
zip = { workspace = true }
marksmen-diff = { version = "0.1.0", path = "../marksmen-diff" }
