[package]
name = "marksmen-cite"
version = "0.1.0"
description = "Marksmen Cite"
authors = ["Ryan @ryancinsight"]
edition = "2021"

[lib]
name = "marksmen_cite_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = "1.0"
base64 = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11.0"

# Web Importer Server
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

marksmen-pdf-read = { path = "../../marksmen-pdf-read" }
marksmen-core = { path = "../../marksmen-core" }
